kubernetes-services.yml
apiVersion: v1
kind: Service
metadata:
  name: prenomservice
spec:
  selector:
    app: prenomservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prenomservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prenomservice
  template:
    metadata:
      labels:
        app: prenomservice
    spec:
      containers:
      - name: prenomservice
        image: ch2314/prenomservice-php:1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rentalservice
spec:
  selector:
    app: rentalservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rentalservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rentalservice
  template:
    metadata:
      labels:
        app: rentalservice
    spec:
      containers:
      - name: rentalservice
        image: ch2314/rentalserviceimage:1
        ports:
        - containerPort: 8080
